Added remove like/thumbs down functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,7 @@
             <span><%= info[i].songName %></span>
             <span><%= info[i].likes %></span>
             <span class='fa fa-thumbs-up'></span>
+            <span class='fa fa-thumbs-down'></span>
             <span class='fa fa-trash'></span>
         </li>
     <% } %>
