--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,15 +17,8 @@
 <html lang="en">
 
 <body>
-    
     <nav class="nav">
-        <ul class="navul">
-            <img src='/images/foundsound.jpg' alt="foundsound logo" id="foundsound">
-            <li><a href="index.html">Home</a></li><!--
-            --><li><a href="schedule.html">Schedule</a></li><!--
-            --><li><a href="venue.html">Venue</a></li><!--
-            --><li><a href="register.html">Register</a></li>
-          </ul>
+        <h1><img src='/images/foundsound.jpg' alt="foundsound logo" id="foundsound">FoundSound Top 40</h1>
     </nav>
 
     <div id="maincontainer">
