--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@ h1,h2{
 
 h1{
   font-size: 3.5rem;
+  margin:10px !important;
 }
 
 ul{
@@ -85,15 +86,6 @@ form{
   margin-bottom: 80px;
 }
 
-.nav li {
-  display: inline-block;
-  margin: 0 10px;
-  vertical-align: top;
-}
-.nav li:last-child {
-  margin-right: 0;
-}
-
 a {
   text-decoration: none;
   color:white;
@@ -103,20 +95,10 @@ a {
 /*******************************************/
 
 .nav {
-  display:flexbox;
-  justify-content: center;
+  padding:10px;
+  text-align: center;
   width:100%;
-  margin: 0 auto;
-  /* border: 1px solid rgba(255, 255, 255, 0.527); */
-  
+  margin-top:20px;
   margin-bottom:80px;
-  padding:15px;
-  background-color: rgba(255, 0, 0, 0.397);
- 
-  
-}
-
-.navul{
-  margin-left: 38%;
-  line-height: 3rem;
+  background-color: rgba(255, 0, 0, 0.219);
 }
