--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,8 @@ h1,h2{
   color:white;
 }
 
+
+
 h1{
   font-size: 3.5rem;
   margin:10px !important;
@@ -71,6 +73,7 @@ span{
 #mainh1{
   color:white;
   vertical-align: middle;
+  margin-top:40px !important;
 }
 
 ul{
@@ -79,6 +82,7 @@ ul{
   margin: 0 auto;
 }
 #addsongheader{
+  font-size: 2rem;
   margin-top:60px;
   color:#cb2824
 }
@@ -97,7 +101,8 @@ a {
 .nav {
   padding:10px;
   text-align: center;
-  width:100%;
+  width:75%;
+  margin: auto;
   margin-top:20px;
   margin-bottom:80px;
   background-color: rgba(255, 0, 0, 0.219);
