Last minute styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         <h1 id="mainh1"><img src='/images/foundsound.jpg' alt="foundsound logo" id="foundsound">Top Songs</h1>
         <h2 id="addsongheader">Add a Song:</h2>
 
-        <form action="/addArtist" method="POST">
+        <form action="/addArtist" method="POST" id="mainform">
             <input type="text" placeholder="Artist Name" name="artistName">
             <input type="text" placeholder="Song Name" name="songName">
             <input type="submit">
