--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,16 +83,19 @@ ul{
 }
 #addsongheader{
   font-size: 2rem;
-  margin-top:60px;
-  color:#cb2824
-}
-form{
-  margin-bottom: 80px;
+  margin-top:80px !important;
+  color:#cb2824;
+  margin-top: 50px;
+  margin-bottom:10px !important;
 }
 
 a {
   text-decoration: none;
   color:white;
+}
+
+form{
+  margin-bottom:60px !important;
 }
 /******************************************
 /* ADDITIONAL STYLES
