--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,3 +110,93 @@ form{
   margin-bottom:80px;
   background-color: rgba(255, 0, 0, 0.219);
 }
+
+@media (max-width: 575.98px){
+  h1{
+    font-size: 20px;
+  }
+
+  h2{
+    font-size:10px;
+  }
+
+  .nav{
+    margin-bottom:10px;
+  }
+
+  #foundsound{
+    height: 40px;
+    padding-right:10px;
+  }
+
+  #maincontainer{
+    width:90%;
+    margin-top:20px;
+    padding:4px;
+  }
+
+  #mainh1{
+    margin:5px;
+    margin-top:20px !important;
+  }
+
+  #addsongheader{
+    margin-top:50px !important;
+    font-size: 20px;
+  }
+  
+  ul{
+    font-size: 14px;
+    width:100%;
+    margin-bottom: 30px;
+    padding-left:4px;
+  }
+
+  #mainform{
+    margin-bottom:60px !important;
+  }
+}
+
+
+@media (min-width: 576px) and (max-width: 1024px) {
+  h1{
+    font-size: 40px;
+  }
+
+  .nav{
+    margin-bottom:10px;
+  }
+
+  #foundsound{
+    height: 40px;
+    padding-right:10px;
+  }
+
+  #maincontainer{
+    width:90%;
+    margin-top:20px;
+    padding:4px;
+  }
+
+  #mainh1{
+    margin:5px;
+    margin-top:20px !important;
+  }
+
+  #addsongheader{
+    margin-top:50px !important;
+    font-size: 40px;
+  }
+  
+  ul{
+    text-align: center;
+    font-size: 25px;
+    width:100%;
+    margin-bottom: 30px;
+    padding-left:4px;
+  }
+
+  #mainform{
+    margin-bottom:60px !important;
+  }
+}
